fixing overflow issue on home page

--- a/src/styles/utilities/_helpers.scss
+++ b/src/styles/utilities/_helpers.scss
@@ -13,6 +13,7 @@
 	position: relative;
 	width: 100%;
 	display: block;
+	overflow: hidden;
 	//z-index: 1;
 }
 
